# test04-detectArmour

./: CMakeLists.txt
src/: main.cpp
src/detect/: CMakeLists.txt
src/detect/include/detect/: detect.h
src/detect/src/: detect.cpp
